--- a/EditProfile.css
+++ b/EditProfile.css
@@ -102,6 +102,12 @@ hr{
     border:none;
     width: 194%;
 }
+input[type=submit]{
+    border:none;
+    background-color:#faeaea;
+    opacity:0.98;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 23px;
+    cursor:pointer;
    
-
-
+}
