--- a/406.css
+++ b/406.css
@@ -12,6 +12,60 @@ body{
 	position: absolute;
 	
 }
+
+body {
+    font-family: helvetica, arial, verdana, sans-serif;
+}
+
+input {
+	font-size: 2.4em;
+	background-color: transparent;
+	text-align: center;
+	border-width: 0;
+	width: 100%;
+	margin: 0 0 .1em 0;
+	color: black;
+}
+
+label {
+	display: block;
+	font-size: .8em;
+}
+
+button {
+	/* basics */
+	color: #e6e6ff;
+	background-color: #B5B198;
+	/* rounded corners */
+    -webkit-border-radius: 6px;
+          border-radius: 6px; 
+    -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
+	font-weight: bold;
+
+}
+
+button:hover, button:active, button:focus {
+	background-color: #CBC7AE;
+}
+
+.box {
+	/* basics */
+	background-color: #e6e6ff;
+	color: #e6e6ff;
+    text-align: center;
+	position: absolute;
+	
+	/* rounded corners */
+    -webkit-border-radius: 12px;
+    border-radius: 12px; 
+    -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
+    padding: .8em .8em 1em;
+    width: 15em;
+	margin: 0 auto;	
+  	-webkit-box-shadow: 0px 0px 12px 0px #000;
+    box-shadow: 0px 0px 12px 0px #000;
+  
+}
 .button{
 
 
@@ -33,6 +87,7 @@ a:visited,a:link,a:active{
 }
 .menu{
     position:fixed;
+	top:1px;
     display:flex;
     min-width: 100%;
 
@@ -42,6 +97,38 @@ a:visited,a:link,a:active{
     justify-content:center;
     z-index: 1;
 }
+#inputArea{
+	position:absolute;
+	position:center;
+	top:500px;
+		    font-family: 'Roboto Condensed', sans-serif;
+
+	
+}
+#textboxBlock{
+	
+	position: center;
+    border: 2px solid black;
+	 background-color: #e6e6ff;
+    padding-top: 10px;
+    font-family: 'Roboto Condensed', sans-serif;
+  margin: 10px 20px;
+    
+    width: 400px;
+    float: right;
+    padding-bottom: 10px;
+}
+
+
+#textbox{
+	    font-family: 'Roboto Condensed', sans-serif;
+	 background-color: #e6e6ff;
+    border: 2px solid black;  
+	margin: 10px 20px;
+
+  width: 400px;
+    float: right;
+}
 .main{
 	
 	position:absolute;
@@ -50,7 +137,14 @@ a:visited,a:link,a:active{
 	left:50px;
 	top:600px;
 }
-
+.votePage{
+	
+	position:fixed;
+	
+    
+	left:50px;
+	top:200px;
+}
 pre{
     font-family: 'Roboto Condensed', sans-serif;
 	
@@ -77,7 +171,7 @@ pre{
         
 }
 
-#bolded{
+h2{
 	    font-family: 'Roboto Condensed', sans-serif;
 
 }
