--- a/406.css
+++ b/406.css
@@ -61,7 +61,7 @@ button:hover, button:active, button:focus {
     -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
     padding: .8em .8em 1em;
     width: 15em;
-	margin: 0 auto;	
+	margin: auto;	
   	-webkit-box-shadow: 0px 0px 12px 0px #000;
     box-shadow: 0px 0px 12px 0px #000;
   
