--- a/FAQ.css
+++ b/FAQ.css
@@ -1,7 +1,7 @@
 body{
-    background-image: url(drupal.png);
-    background-repeat: repeat;;
+    
     background-size: 100%;
+
     width:100%;
     height:100%;
     padding: 0px;
@@ -14,9 +14,13 @@ body{
     padding: 20px;
     float: right;
     margin: 0px 20px 0px 20px;
-    font-family:  'Roboto Condensed', sans-serif;
+    font-family: 'Baloo Bhaina', cursive;
     font-size: 1.5em;
     text-align: center;
+}
+p{
+	    font-family:  'Roboto Condensed', sans-serif;
+
 }
 a:visited,a:link,a:active{
     color:black;
@@ -31,7 +35,7 @@ a:visited,a:link,a:active{
     min-width: 100%;
 
     min-height: 10%;
-    background-color: #00CED1;
+    background-color: #e6e6ff;
     align-items: center;
     justify-content:center;
     z-index: 1;
