--- a/406.css
+++ b/406.css
@@ -98,10 +98,10 @@ a:visited,a:link,a:active{
     z-index: 1;
 }
 #inputArea{
-	position:absolute;
-	position:center;
-	top:500px;
-	font-family: 'Roboto Condensed', sans-serif;
+	position:relative;
+	
+	top:300px;
+		    font-family: 'Roboto Condensed', sans-serif;
 
 	
 }
@@ -192,4 +192,215 @@ img{
     margin: auto;
     width: 400px; /*The width you want it to be when centered*/
     /* min-width works too */
+}
+
+
+body{
+   
+    background-repeat: repeat;;
+    background-size: 100%;
+	overflow-y: scroll;
+    width:100%;
+    height:100%;
+    padding: 0px;
+    margin:0px;
+	position: absolute;
+	
+}
+
+body {
+    font-family: helvetica, arial, verdana, sans-serif;
+}
+
+input {
+	font-size: 2.4em;
+	background-color: transparent;
+	text-align: center;
+	border-width: 0;
+	width: 100%;
+	margin: 0 0 .1em 0;
+	color: black;
+}
+
+label {
+	display: block;
+	font-size: .8em;
+}
+
+button {
+	/* basics */
+	color: #e6e6ff;
+	background-color: #B5B198;
+	/* rounded corners */
+    -webkit-border-radius: 6px;
+          border-radius: 6px; 
+    -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
+	font-weight: bold;
+
+}
+
+button:hover, button:active, button:focus {
+	background-color: #CBC7AE;
+}
+
+.box {
+	/* basics */
+	background-color: #e6e6ff;
+	color: #e6e6ff;
+    text-align: center;
+	position: absolute;
+	
+	/* rounded corners */
+    -webkit-border-radius: 12px;
+    border-radius: 12px; 
+    -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
+    padding: .8em .8em 1em;
+    width: 15em;
+	margin: auto;	
+  	-webkit-box-shadow: 0px 0px 12px 0px #000;
+    box-shadow: 0px 0px 12px 0px #000;
+  
+}
+.button{
+
+
+    width: 75px;
+    padding: 20px;
+    float: right;
+    margin: 0px 20px 0px 20px;
+    font-family: 'Baloo Bhaina', cursive;
+    font-size: 1.5em;
+    text-align: center;
+	
+}
+a:visited,a:link,a:active{
+    color:black;
+}
+.button:hover{
+    transform: scale(1.5);
+    cursor:pointer;
+}
+.menu{
+    position:fixed;
+	top:1px;
+    display:flex;
+    min-width: 100%;
+
+    min-height: 10%;
+    background-color: #e6e6ff;
+    align-items: center;
+    justify-content:center;
+    z-index: 1;
+}
+#inputArea{
+	position:relative;
+	
+	top:300px;
+		    font-family: 'Roboto Condensed', sans-serif;
+
+	
+}
+#textboxBlock{
+	
+	position: center;
+    border: 2px solid black;
+	 background-color: #e6e6ff;
+    padding-top: 10px;
+    font-family: 'Roboto Condensed', sans-serif;
+  margin: 10px 20px;
+    
+    width: 400px;
+    float: right;
+    padding-bottom: 10px;
+}
+
+
+#textbox{
+	    font-family: 'Roboto Condensed', sans-serif;
+	 background-color: #e6e6ff;
+    border: 2px solid black;  
+	margin: 10px 20px;
+
+  width: 400px;
+    float: right;
+}
+.main{
+	
+	position:absolute;
+	font-family: 'Baloo Bhaina', cursive;
+    
+	left:50px;
+	top:600px;
+}
+.votePage{
+	
+	position:fixed;
+	
+    
+	left:50px;
+	top:200px;
+}
+pre{
+    font-family: 'Roboto Condensed', sans-serif;
+	
+}
+#pic{
+	position:absolute;
+	right:20px;
+	bottom:52px;
+	z-index: 2;
+}
+#torontoLand{
+	position: absolute;
+	top:65px;
+	
+	
+}
+
+#reportLink{
+	   font-family: 'Roboto Condensed', sans-serif;
+		text-align: left;
+		     width: 200px;
+   text-decoration: underline;
+
+        
+}
+
+h2{
+	    font-family: 'Roboto Condensed', sans-serif;
+
+}
+img{
+    display: block;
+    margin: 0 auto;
+    margin-top:5%;
+}
+#block2 {
+    
+    margin: 10px 20px;
+    padding: 20px;
+    width: 180px;
+    float: right;
+	
+}
+.wrapper {
+    margin: auto;
+    width: 400px; /*The width you want it to be when centered*/
+    /* min-width works too */
+}
+
+#button-report{
+
+	border:solid black 1px;
+	border-radius: 5px;
+	padding: 5px 5px 5px 5px;
+	font-family: 'Roboto Condensed', sans-serif;
+
+}
+.link-to-reports{
+	position:absolute;
+	right:100px;
+	top: 650px;
+	font-size:200%;
+
 }
