Last minute fixes

--- a/406.css
+++ b/406.css
@@ -156,9 +156,10 @@ pre{
 	z-index: 2;
 }
 #torontoLand{
-	position: absolute;
+	position: relative;
 	top:65px;
-	
+	width:100%;
+	height: auto;
 	
 }
 
